# AutomationClub

./: .env.example  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  DEPLOY.md  MAPPING-snir-categories.md  MVP-SCOPE-v0.1.md  PLAN-laura-product-upload.md  PLAN-segal-baby.md  PRD-bambino-product-sync.md  PRD-inventory-sync-v1.md  PRD-laura-product-upload.md  PRD-segal-product-sync.md  PRD-snir-product-sync.md  README.md  ROADMAP.md  STATUS-snir-build.md  pyproject.toml
bench/: bench_item_state_store.py  bench_request_reduction.py  bench_sitemap_parse.py
inventory_sync/: __init__.py  __main__.py  audit.py  axiom_handler.py  bambino_delete.py  bambino_ingest.py  bambino_mapping.py  bambino_source.py  browser_fetch.py  config.py  customer_sync.py  customers.py  deltas.py  domain.py  engine.py  fakes.py  interfaces.py  laura_ingest.py  laura_mapping.py  laura_upload.py  log.py  notifications.py  orchestrator.py  policies.py  reconcile.py  review_reasons.py  segal_ingest.py  segal_mapping.py  segal_pass.py  segal_source.py  snir_mapping.py  snir_pass.py  snir_source.py  store_content.py  supplier_pass.py  vendor_scan.py
reports/: INGEST-family-mapping-clarification.md  family_collection_map_FINAL.md  laura-discontinued-2026-04-22.csv  resend-dns-setup.md  segal-sample-product-instock.json  segal-sample-product.json
scripts/: migrate_store_products_lifecycle.py
tests/: conftest.py  test_adapter_email_resend.py  test_adapter_laura_design.py  test_adapter_shopify.py  test_adapter_whatsapp_bridge.py  test_audit.py  test_bambino_adapter.py  test_bambino_delete.py  test_config.py  (+35 more)
(+25 files in other folders)
